--- a/index.ipynb
+++ b/index.ipynb
@@ -362,9 +362,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.plotly.v1+json": {
+       "data": [
+        {
+         "mode": "lines",
+         "name": "increased est. revenue",
+         "text": [],
+         "type": "scatter",
+         "uid": "8343fc34-d935-11e8-99a2-0242ac11002d",
+         "x": [
+          0,
+          150
+         ],
+         "y": [
+          50,
+          500
+         ]
+        },
+        {
+         "mode": "lines",
+         "name": "estimated revenue",
+         "text": [],
+         "type": "scatter",
+         "uid": "8343fec8-d935-11e8-99a2-0242ac11002d",
+         "x": [
+          0,
+          150
+         ],
+         "y": [
+          0,
+          450
+         ]
+        }
+       ],
+       "layout": {
+        "title": "Movie Spending and Revenue (in millions)"
+       }
+      },
+      "text/html": [
+       "<div id=\"228acbf9-5287-4716-ad65-8b4f291f5946\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"228acbf9-5287-4716-ad65-8b4f291f5946\", [{\"mode\": \"lines\", \"name\": \"increased est. revenue\", \"text\": [], \"x\": [0, 150], \"y\": [50, 500], \"type\": \"scatter\", \"uid\": \"834dd286-d935-11e8-99a2-0242ac11002d\"}, {\"mode\": \"lines\", \"name\": \"estimated revenue\", \"text\": [], \"x\": [0, 150], \"y\": [0, 450], \"type\": \"scatter\", \"uid\": \"834dd4de-d935-11e8-99a2-0242ac11002d\"}], {\"title\": \"Movie Spending and Revenue (in millions)\"}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<div id=\"228acbf9-5287-4716-ad65-8b4f291f5946\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"228acbf9-5287-4716-ad65-8b4f291f5946\", [{\"mode\": \"lines\", \"name\": \"increased est. revenue\", \"text\": [], \"x\": [0, 150], \"y\": [50, 500], \"type\": \"scatter\", \"uid\": \"834dd286-d935-11e8-99a2-0242ac11002d\"}, {\"mode\": \"lines\", \"name\": \"estimated revenue\", \"text\": [], \"x\": [0, 150], \"y\": [0, 450], \"type\": \"scatter\", \"uid\": \"834dd4de-d935-11e8-99a2-0242ac11002d\"}], {\"title\": \"Movie Spending and Revenue (in millions)\"}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "regression_trace_increased = trace_values([0, 150], [50, 500], mode = 'lines', name = 'increased est. revenue')\n",
     "plot([regression_trace_increased, regression_trace], movie_layout)"
@@ -425,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -435,18 +485,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "140000000"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "y(30000000)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "230000000"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "y(60000000)"
    ]
@@ -468,6 +540,27 @@
     "\n",
     "We then learned how to represent a line as a mathematical formula, and ultimately a function.  We describe lines through the formula $y = mx + b $, with $m$ representing the slope of the line, and $b$ representing the value of $y$ when $x$ equals zero.  The $b$ variable shifts the line up or down while the $m$ variable tilts the line forwards or backwards.  Translating this formula into a function, we can write a function that returns an expected value of $y$ for an input value of $x$."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
